scripts/k8s/deepseek-v31/llm-d/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm-d-deepseek-v3-pd-disaggregation
  namespace: llm-d-deepseek-v3
  labels:
    app: llm-d-deepseek-v3
    component: httproute
spec:
  parentRefs:
  - name: infra-deepseek-v3-inference-gateway
    namespace: llm-d-deepseek-v3
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: ExtensionRef
      extensionRef:
        group: inference.networking.x-k8s.io
        kind: InferencePool
        name: gaie-deepseek-v3
    backendRefs:
    - name: ms-deepseek-v3-llm-d-modelservice-prefill
      port: 8000
    - name: ms-deepseek-v3-llm-d-modelservice-decode
      port: 8200
